--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -13,3 +13,14 @@
   
 [build.environment]
   NODE_VERSION = "20"
+  # Make sure the same URL is used for auth redirect
+  VITE_PUBLIC_URL = "https://pregal-profiterole-cc2dd3.netlify.app"
+
+# Security headers
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
